--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<suiteFileName>${suite}</suiteFileName>
+		
+		<!-- src/test/resources/driver.xml -->
+		
+		
 	</properties>
 
 	<dependencies>
@@ -37,10 +42,14 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.14.1</version>
+
 				<configuration>
-					<!-- Suite testng xml file to consider for test execution -->
+					<!-- Suite testng xml file to consider for test execution
+					
+					
+					 -->
 					<suiteXmlFiles>
-						<suiteXmlFile>src/test/java/driver.xml</suiteXmlFile>
+						<suiteXmlFile>${suiteFileName}</suiteXmlFile>
 
 					</suiteXmlFiles>
 				</configuration>
@@ -48,5 +57,11 @@
 		</plugins>
 	</build>
 
+	<repositories>
 
+		<repository>
+			<id>4353</id>
+			<url>mycompany Repo.com</url>
+		</repository>
+	</repositories>
 </project>
